refactor(runtime): 使用静态工厂方法替代显式初始化流程